Melhorias de UX

--- a/eas.json
+++ b/eas.json
@@ -8,14 +8,8 @@
       "developmentClient": true,
       "distribution": "internal"
     },
-    "preview": {
-      "android": {
-        "buildType": "apk"
-      },
-      "distribution": "internal"
-    },
     "production": {
-      "autoIncrement": true
+      "distribution": "store"
     }
   },
   "submit": {
